# magpie

./: .gitignore  Makefile  PROMPT.md  README.md  pyproject.toml  ruff.toml
src/magpie/: cli.py  config.py  runner.py  tagger.py  watcher.py  writer.py
src/magpie/webui/: __init__.py  jobs.py  logstream.py  server.py
src/magpie/webui/static/: app.js  index.html  library.css  library.html  library.js  logs.css  logs.html  logs.js  picker.js  settings.html  settings.js  style.css
tests/: test_cli.py  test_cli_smoke.py  test_config.py  test_jobs.py  test_review_fixes.py  test_runner.py  test_tagger.py  test_watcher.py  test_webui.py  test_writer.py
